// SPDX-License-Identifier: GPL-3.0-or-later OR Apache-2.0

plugins {
    id 'com.android.library'
    id 'maven-publish'
}

group = 'io.github.muntashirakon'
version = '3.0.0'

android {
    compileSdk 34
    namespace "io.github.muntashirakon.adb"

    defaultConfig {
        minSdk 1
        targetSdk 34
        aarMetadata {
            minCompileSdk = 1
        }
    }

    buildTypes {
        release {
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    publishing {
        singleVariant("release") {
            withSourcesJar()
            withJavadocJar()
        }
    }
}

publishing {
    publications {
        release(MavenPublication) {
            artifactId = 'libadb'
            afterEvaluate {
                from components.release
            }
        }
    }
}

dependencies {
    implementation "androidx.annotation:annotation:1.7.1"
    implementation 'org.bouncycastle:bcprov-jdk15to18:1.78'
    implementation 'com.github.MuntashirAkon.spake2-java:android:2.0.0'

    testImplementation 'junit:junit:4.13.2'
}
